--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: macroinvertebrateMetrics
 Type: Package
-Title: Freshwater Biotic indices
+Title: Macroinvertebrate Biotic indices
 Version: 0.98-2
 Date: 2017-03-30
 Authors@R: c(person("Carlos","Ruiz",role="aut"),
              person("Tim","Foster",email = "tim.foster@sepa.org.uk",role=c("ctb","cre"))) 
-Description: Metrics for assessing ecological indicators of biodiversity in rivers and lakes.
+Description: Metrics and biotic indices for assessing ecological indicators of biodiversity in rivers and lakes.
 Suggests:
   covr,
   testthat,
