--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,15 +6,20 @@ Date: 2017-03-30
 Authors@R: c(person("Carlos","Ruiz",role="aut"),
              person("Tim","Foster",email = "tim.foster@sepa.org.uk",role=c("ctb","cre"))) 
 Description: Metrics and biotic indices for assessing ecological indicators of biodiversity in rivers and lakes.
+Imports:
+  magrittr
 Suggests:
   covr,
   testthat,
   knitr,
   sepaTools,
   lintr,
-  devtools
-Depends: 
-  R (>= 2.10)
+  devtools,
+  rmarkdown
+Depends:
+  R (>= 2.10),
+  dplyr,
+  tidyr
 License: MIT + file LICENSE
 URL: https://github.com/aquaMetrics/macroinvertebrateMetrics
 LazyLoad: yes
