--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,16 @@
 Package: macroinvertebrateMetrics
 Type: Package
 Title: Macroinvertebrate Biotic indices
-Version: 0.91.9
+Version: 0.99.2
 Date: 2019-04-05
 Authors@R: c(person("Carlos","Ruiz",role="aut"),
              person("Tim","Foster",email = "tim.foster@sepa.org.uk",role=c("ctb","cre"))) 
 Description: Metrics and biotic indices for assessing ecological indicators of biodiversity in rivers and lakes.
 Imports:
-  magrittr
+  magrittr,
+  dplyr,
+  tidyr,
+  rlang
 Suggests:
   covr,
   testthat,
@@ -17,9 +20,7 @@ Suggests:
   devtools,
   rmarkdown
 Depends:
-  R (>= 2.10),
-  dplyr,
-  tidyr
+  R (>= 3.1)
 License: MIT + file LICENSE
 URL: https://github.com/aquaMetrics/macroinvertebrateMetrics
 LazyLoad: yes
