--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -9,3 +9,6 @@ backup
 ^\.lintr$
 ^\CODE_OF_CONDUCT.md$
 ^\CONTRIBUTING.md$
+^macroinvertebrateMetrics\.Rcheck$
+^macroinvertebrateMetrics.*\.tar\.gz$
+^macroinvertebrateMetrics.*\.tgz$
