update awic func 0302 dave

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(calcPsi)
 export(calcRiverfly)
 export(calcSpear)
 export(calcWhpt)
+export(calc_awic)
 export(filterPsi)
 export(filterSpear)
+importFrom(dplyr,n)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
