--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,17 +7,19 @@ Authors@R: c(person("Carlos","Ruiz",role="aut"),
              person("Tim","Foster",email = "tim.foster@sepa.org.uk",role=c("ctb","cre"))) 
 Description: Metrics and biotic indices for assessing ecological indicators of biodiversity in rivers and lakes.
 Imports:
-  magrittr,
   dplyr,
+  magrittr,
+  rlang,
   tidyr,
-  rlang
+  tibble,
+  purrr
 Suggests:
   covr,
-  testthat,
-  knitr,
-  lintr,
   devtools,
-  rmarkdown
+  lintr,
+  knitr,
+  rmarkdown,
+  testthat
 Depends:
   R (>= 4.0)
 License: MIT + file LICENSE
@@ -26,3 +28,4 @@ LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
 RoxygenNote: 7.2.3
+Encoding: UTF-8
