--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,12 @@ export(calcRiverfly)
 export(calcSpear)
 export(calcWhpt)
 export(calc_awic)
+export(calc_metric)
 export(filterPsi)
 export(filterSpear)
+importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(tidyr,pivot_longer)
