refactor: change function names to snake_case

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ export(calc_psi)
 export(calc_riverfly)
 export(calc_spear)
 export(calc_whpt)
-export(filterSpear)
 export(filter_psi)
+export(filter_spear)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
