refactor: make input 'hera' compatible and reduce repetitive code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,9 +9,13 @@ export(calc_spear)
 export(calc_whpt)
 export(filter_psi)
 export(filter_spear)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
+importFrom(dplyr,any_of)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select)
 importFrom(magrittr,"%>%")
+importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(tidyr,pivot_longer)
